translators/qhasm/annotParser.output
   0  $accept : %entry% $end

   1  annotations : annot annotations
   2              | annot

   3  annot : CONST consts
   4        | AUXVAR auxvars
   5        | PREDICATE predicates
   6        | INV bexp
   7        | ASSUME bexp
   8        | ASSERT bexp
   9        | CUT bexp
  10        | CONST error
  11        | INV error
  12        | PREDICATE error
  13        | ASSUME error
  14        | ASSERT error
  15        | CUT error
  16        | error

  17  consts : exp consts
  18         | exp

  19  auxvars : auxvar auxvars
  20          | auxvar

  21  auxvar : VAR EQ exp
  22         | VAR LPAREN formals RPAREN EQ exp
  23         | VAR LPAREN formals RPAREN EQ error
  24         | VAR CAST
  25         | VAR CAST EQ error

  26  predicates : predicate predicates
  27             | predicate

  28  predicate : VAR LPAREN formals RPAREN EQ bexp

  29  bexp : mix

  30  exp : mix

  31  mix : exp_logical
  32      | exp_logical_b QUESTION exp_logical_e COLON exp_logical_e

  33  exp_logical_b : exp_logical

  34  exp_logical_e : exp_logical

  35  exp_logical : exp_logical RARR exp_logical
  36              | exp_logical DISJUNCTION exp_logical
  37              | exp_logical CONJUNCTION exp_logical
  38              | NOT atomic
  39              | exp_compare

  40  exp_compare : exp_arith lessop actuals bless
  41              | exp_arith moreop actuals bmore
  42              | exp_arith EQ exp_arith
  43              | exp_arith NE exp_arith
  44              | exp_arith

  45  bless : lessop exp_arith
  46        |

  47  bmore : moreop exp_arith
  48        |

  49  exp_arith : atomic
  50            | exp_arith PLUS exp_arith
  51            | exp_arith MINUS exp_arith
  52            | exp_arith MULT exp_arith
  53            | exp_arith AND exp_arith
  54            | exp_arith OR exp_arith
  55            | exp_arith XOR exp_arith
  56            | exp_arith SMOD exp_arith
  57            | exp_arith UMOD exp_arith
  58            | exp_arith SHIFTL exp_arith
  59            | exp_arith USHIFTR exp_arith
  60            | exp_arith SHIFTR exp_arith
  61            | exp_arith POWER exp_arith
  62            | MINUS exp_arith

  63  atomic_e : atomic

  64  atomic : big
  65         | CARRY
  66         | var
  67         | TRUE
  68         | LPAREN mix RPAREN
  69         | LPAREN mix RPAREN SPLIT num
  70         | atomic_e DOT atomic_e
  71         | atomic_e CAST
  72         | atomic_e LOW
  73         | atomic_e HIGH
  74         | atomic_e LSQUARE num COMMA num RSQUARE
  75         | atomic_e LSQUARE num RSQUARE
  76         | VAR LPAREN RPAREN
  77         | VAR LPAREN actuals RPAREN
  78         | atomic_e LSQUARE error

  79  num : NUM

  80  big : NUM

  81  var : VAR
  82      | typem LSQUARE qaddr RSQUARE
  83      | typem LSQUARE VAR RSQUARE
  84      | typem error

  85  qaddr : qvar PLUS num
  86        | qvar PLUS qvar
  87        | qvar PLUS qvar MULT num
  88        | qvar PLUS num PLUS qvar MULT num

  89  qvar : VAR

  90  formals : formals_rev
  91          |

  92  formals_rev : formals_rev COMMA fparam
  93              | fparam

  94  fparam : VAR CAST

  95  actuals : actuals_rev

  96  actuals_rev : actuals_rev COMMA exp_arith
  97              | exp_arith

  98  typem : MEM64
  99        | MEM32

 100  lessop : ULT
 101         | ULE
 102         | SLT
 103         | SLE

 104  moreop : UGT
 105         | UGE
 106         | SGT
 107         | SGE

 108  %entry% : '\001' annotations

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . annotations  (108)

	error  shift 3
	AUXVAR  shift 4
	CONST  shift 5
	INV  shift 6
	ASSUME  shift 7
	ASSERT  shift 8
	CUT  shift 9
	PREDICATE  shift 10
	.  error

	annotations  goto 11
	annot  goto 12


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	annot : error .  (16)

	.  reduce 16


state 4
	annot : AUXVAR . auxvars  (4)

	VAR  shift 13
	.  error

	auxvars  goto 14
	auxvar  goto 15


state 5
	annot : CONST . consts  (3)
	annot : CONST . error  (10)

	error  shift 16
	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	NOT  shift 22
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	consts  goto 26
	exp  goto 27
	mix  goto 28
	exp_logical  goto 29
	exp_logical_b  goto 30
	atomic  goto 31
	exp_compare  goto 32
	exp_arith  goto 33
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 6
	annot : INV . bexp  (6)
	annot : INV . error  (11)

	error  shift 38
	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	NOT  shift 22
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	bexp  goto 39
	mix  goto 40
	exp_logical  goto 29
	exp_logical_b  goto 30
	atomic  goto 31
	exp_compare  goto 32
	exp_arith  goto 33
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 7
	annot : ASSUME . bexp  (7)
	annot : ASSUME . error  (13)

	error  shift 41
	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	NOT  shift 22
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	bexp  goto 42
	mix  goto 40
	exp_logical  goto 29
	exp_logical_b  goto 30
	atomic  goto 31
	exp_compare  goto 32
	exp_arith  goto 33
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 8
	annot : ASSERT . bexp  (8)
	annot : ASSERT . error  (14)

	error  shift 43
	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	NOT  shift 22
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	bexp  goto 44
	mix  goto 40
	exp_logical  goto 29
	exp_logical_b  goto 30
	atomic  goto 31
	exp_compare  goto 32
	exp_arith  goto 33
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 9
	annot : CUT . bexp  (9)
	annot : CUT . error  (15)

	error  shift 45
	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	NOT  shift 22
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	bexp  goto 46
	mix  goto 40
	exp_logical  goto 29
	exp_logical_b  goto 30
	atomic  goto 31
	exp_compare  goto 32
	exp_arith  goto 33
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 10
	annot : PREDICATE . predicates  (5)
	annot : PREDICATE . error  (12)

	error  shift 47
	VAR  shift 48
	.  error

	predicates  goto 49
	predicate  goto 50


state 11
	%entry% : '\001' annotations .  (108)

	.  reduce 108


state 12
	annotations : annot . annotations  (1)
	annotations : annot .  (2)

	error  shift 3
	AUXVAR  shift 4
	CONST  shift 5
	INV  shift 6
	ASSUME  shift 7
	ASSERT  shift 8
	CUT  shift 9
	PREDICATE  shift 10
	$end  reduce 2

	annotations  goto 51
	annot  goto 12


state 13
	auxvar : VAR . EQ exp  (21)
	auxvar : VAR . LPAREN formals RPAREN EQ exp  (22)
	auxvar : VAR . LPAREN formals RPAREN EQ error  (23)
	auxvar : VAR . CAST  (24)
	auxvar : VAR . CAST EQ error  (25)

	CAST  shift 52
	LPAREN  shift 53
	EQ  shift 54
	.  error


state 14
	annot : AUXVAR auxvars .  (4)

	.  reduce 4


state 15
	auxvars : auxvar . auxvars  (19)
	auxvars : auxvar .  (20)

	VAR  shift 13
	$end  reduce 20
	error  reduce 20
	AUXVAR  reduce 20
	CONST  reduce 20
	INV  reduce 20
	ASSUME  reduce 20
	ASSERT  reduce 20
	CUT  reduce 20
	PREDICATE  reduce 20

	auxvars  goto 55
	auxvar  goto 15


state 16
	annot : CONST error .  (10)

	.  reduce 10


state 17
	big : NUM .  (80)

	.  reduce 80


state 18
	atomic : VAR . LPAREN RPAREN  (76)
	atomic : VAR . LPAREN actuals RPAREN  (77)
	var : VAR .  (81)

	LPAREN  shift 56
	$end  reduce 81
	error  reduce 81
	NUM  reduce 81
	VAR  reduce 81
	CAST  reduce 81
	RPAREN  reduce 81
	LSQUARE  reduce 81
	COMMA  reduce 81
	COLON  reduce 81
	AUXVAR  reduce 81
	CONST  reduce 81
	INV  reduce 81
	ASSUME  reduce 81
	ASSERT  reduce 81
	CUT  reduce 81
	PREDICATE  reduce 81
	SMOD  reduce 81
	UMOD  reduce 81
	POWER  reduce 81
	CONJUNCTION  reduce 81
	DISJUNCTION  reduce 81
	RARR  reduce 81
	PLUS  reduce 81
	MINUS  reduce 81
	MULT  reduce 81
	AND  reduce 81
	OR  reduce 81
	XOR  reduce 81
	QUESTION  reduce 81
	EQ  reduce 81
	NE  reduce 81
	DOT  reduce 81
	SLT  reduce 81
	SGT  reduce 81
	SLE  reduce 81
	SGE  reduce 81
	ULT  reduce 81
	UGT  reduce 81
	ULE  reduce 81
	UGE  reduce 81
	CARRY  reduce 81
	NOT  reduce 81
	SHIFTL  reduce 81
	SHIFTR  reduce 81
	USHIFTR  reduce 81
	LOW  reduce 81
	HIGH  reduce 81
	MEM64  reduce 81
	MEM32  reduce 81
	TRUE  reduce 81


state 19
	atomic : LPAREN . mix RPAREN  (68)
	atomic : LPAREN . mix RPAREN SPLIT num  (69)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	NOT  shift 22
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	mix  goto 57
	exp_logical  goto 29
	exp_logical_b  goto 30
	atomic  goto 31
	exp_compare  goto 32
	exp_arith  goto 33
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 20
	exp_arith : MINUS . exp_arith  (62)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 58
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 21
	atomic : CARRY .  (65)

	.  reduce 65


state 22
	exp_logical : NOT . atomic  (38)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 59
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 23
	typem : MEM64 .  (98)

	.  reduce 98


state 24
	typem : MEM32 .  (99)

	.  reduce 99


state 25
	atomic : TRUE .  (67)

	.  reduce 67


state 26
	annot : CONST consts .  (3)

	.  reduce 3


state 27
	consts : exp . consts  (17)
	consts : exp .  (18)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	NOT  shift 22
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	$end  reduce 18
	error  reduce 18
	AUXVAR  reduce 18
	CONST  reduce 18
	INV  reduce 18
	ASSUME  reduce 18
	ASSERT  reduce 18
	CUT  reduce 18
	PREDICATE  reduce 18

	consts  goto 60
	exp  goto 27
	mix  goto 28
	exp_logical  goto 29
	exp_logical_b  goto 30
	atomic  goto 31
	exp_compare  goto 32
	exp_arith  goto 33
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 28
	exp : mix .  (30)

	.  reduce 30


state 29
	mix : exp_logical .  (31)
	exp_logical_b : exp_logical .  (33)
	exp_logical : exp_logical . RARR exp_logical  (35)
	exp_logical : exp_logical . DISJUNCTION exp_logical  (36)
	exp_logical : exp_logical . CONJUNCTION exp_logical  (37)

	CONJUNCTION  shift 61
	DISJUNCTION  shift 62
	RARR  shift 63
	$end  reduce 31
	error  reduce 31
	NUM  reduce 31
	VAR  reduce 31
	LPAREN  reduce 31
	RPAREN  reduce 31
	AUXVAR  reduce 31
	CONST  reduce 31
	INV  reduce 31
	ASSUME  reduce 31
	ASSERT  reduce 31
	CUT  reduce 31
	PREDICATE  reduce 31
	MINUS  reduce 31
	QUESTION  reduce 33
	CARRY  reduce 31
	NOT  reduce 31
	MEM64  reduce 31
	MEM32  reduce 31
	TRUE  reduce 31


state 30
	mix : exp_logical_b . QUESTION exp_logical_e COLON exp_logical_e  (32)

	QUESTION  shift 64
	.  error


state 31
	exp_arith : atomic .  (49)
	atomic_e : atomic .  (63)

	$end  reduce 49
	error  reduce 49
	NUM  reduce 49
	VAR  reduce 49
	CAST  reduce 63
	LPAREN  reduce 49
	RPAREN  reduce 49
	LSQUARE  reduce 63
	COMMA  reduce 49
	COLON  reduce 49
	AUXVAR  reduce 49
	CONST  reduce 49
	INV  reduce 49
	ASSUME  reduce 49
	ASSERT  reduce 49
	CUT  reduce 49
	PREDICATE  reduce 49
	SMOD  reduce 49
	UMOD  reduce 49
	POWER  reduce 49
	CONJUNCTION  reduce 49
	DISJUNCTION  reduce 49
	RARR  reduce 49
	PLUS  reduce 49
	MINUS  reduce 49
	MULT  reduce 49
	AND  reduce 49
	OR  reduce 49
	XOR  reduce 49
	QUESTION  reduce 49
	EQ  reduce 49
	NE  reduce 49
	DOT  reduce 63
	SLT  reduce 49
	SGT  reduce 49
	SLE  reduce 49
	SGE  reduce 49
	ULT  reduce 49
	UGT  reduce 49
	ULE  reduce 49
	UGE  reduce 49
	CARRY  reduce 49
	NOT  reduce 49
	SHIFTL  reduce 49
	SHIFTR  reduce 49
	USHIFTR  reduce 49
	LOW  reduce 63
	HIGH  reduce 63
	MEM64  reduce 49
	MEM32  reduce 49
	TRUE  reduce 49


state 32
	exp_logical : exp_compare .  (39)

	.  reduce 39


33: shift/reduce conflict (shift 69, reduce 44) on MINUS
state 33
	exp_compare : exp_arith . lessop actuals bless  (40)
	exp_compare : exp_arith . moreop actuals bmore  (41)
	exp_compare : exp_arith . EQ exp_arith  (42)
	exp_compare : exp_arith . NE exp_arith  (43)
	exp_compare : exp_arith .  (44)
	exp_arith : exp_arith . PLUS exp_arith  (50)
	exp_arith : exp_arith . MINUS exp_arith  (51)
	exp_arith : exp_arith . MULT exp_arith  (52)
	exp_arith : exp_arith . AND exp_arith  (53)
	exp_arith : exp_arith . OR exp_arith  (54)
	exp_arith : exp_arith . XOR exp_arith  (55)
	exp_arith : exp_arith . SMOD exp_arith  (56)
	exp_arith : exp_arith . UMOD exp_arith  (57)
	exp_arith : exp_arith . SHIFTL exp_arith  (58)
	exp_arith : exp_arith . USHIFTR exp_arith  (59)
	exp_arith : exp_arith . SHIFTR exp_arith  (60)
	exp_arith : exp_arith . POWER exp_arith  (61)

	SMOD  shift 65
	UMOD  shift 66
	POWER  shift 67
	PLUS  shift 68
	MINUS  shift 69
	MULT  shift 70
	AND  shift 71
	OR  shift 72
	XOR  shift 73
	EQ  shift 74
	NE  shift 75
	SLT  shift 76
	SGT  shift 77
	SLE  shift 78
	SGE  shift 79
	ULT  shift 80
	UGT  shift 81
	ULE  shift 82
	UGE  shift 83
	SHIFTL  shift 84
	SHIFTR  shift 85
	USHIFTR  shift 86
	$end  reduce 44
	error  reduce 44
	NUM  reduce 44
	VAR  reduce 44
	LPAREN  reduce 44
	RPAREN  reduce 44
	COLON  reduce 44
	AUXVAR  reduce 44
	CONST  reduce 44
	INV  reduce 44
	ASSUME  reduce 44
	ASSERT  reduce 44
	CUT  reduce 44
	PREDICATE  reduce 44
	CONJUNCTION  reduce 44
	DISJUNCTION  reduce 44
	RARR  reduce 44
	QUESTION  reduce 44
	CARRY  reduce 44
	NOT  reduce 44
	MEM64  reduce 44
	MEM32  reduce 44
	TRUE  reduce 44

	lessop  goto 87
	moreop  goto 88


state 34
	atomic : atomic_e . DOT atomic_e  (70)
	atomic : atomic_e . CAST  (71)
	atomic : atomic_e . LOW  (72)
	atomic : atomic_e . HIGH  (73)
	atomic : atomic_e . LSQUARE num COMMA num RSQUARE  (74)
	atomic : atomic_e . LSQUARE num RSQUARE  (75)
	atomic : atomic_e . LSQUARE error  (78)

	CAST  shift 89
	LSQUARE  shift 90
	DOT  shift 91
	LOW  shift 92
	HIGH  shift 93
	.  error


state 35
	atomic : big .  (64)

	.  reduce 64


state 36
	atomic : var .  (66)

	.  reduce 66


state 37
	var : typem . LSQUARE qaddr RSQUARE  (82)
	var : typem . LSQUARE VAR RSQUARE  (83)
	var : typem . error  (84)

	error  shift 94
	LSQUARE  shift 95
	.  error


state 38
	annot : INV error .  (11)

	.  reduce 11


state 39
	annot : INV bexp .  (6)

	.  reduce 6


state 40
	bexp : mix .  (29)

	.  reduce 29


state 41
	annot : ASSUME error .  (13)

	.  reduce 13


state 42
	annot : ASSUME bexp .  (7)

	.  reduce 7


state 43
	annot : ASSERT error .  (14)

	.  reduce 14


state 44
	annot : ASSERT bexp .  (8)

	.  reduce 8


state 45
	annot : CUT error .  (15)

	.  reduce 15


state 46
	annot : CUT bexp .  (9)

	.  reduce 9


state 47
	annot : PREDICATE error .  (12)

	.  reduce 12


state 48
	predicate : VAR . LPAREN formals RPAREN EQ bexp  (28)

	LPAREN  shift 96
	.  error


state 49
	annot : PREDICATE predicates .  (5)

	.  reduce 5


state 50
	predicates : predicate . predicates  (26)
	predicates : predicate .  (27)

	VAR  shift 48
	$end  reduce 27
	error  reduce 27
	AUXVAR  reduce 27
	CONST  reduce 27
	INV  reduce 27
	ASSUME  reduce 27
	ASSERT  reduce 27
	CUT  reduce 27
	PREDICATE  reduce 27

	predicates  goto 97
	predicate  goto 50


state 51
	annotations : annot annotations .  (1)

	.  reduce 1


state 52
	auxvar : VAR CAST .  (24)
	auxvar : VAR CAST . EQ error  (25)

	EQ  shift 98
	$end  reduce 24
	error  reduce 24
	VAR  reduce 24
	AUXVAR  reduce 24
	CONST  reduce 24
	INV  reduce 24
	ASSUME  reduce 24
	ASSERT  reduce 24
	CUT  reduce 24
	PREDICATE  reduce 24


state 53
	auxvar : VAR LPAREN . formals RPAREN EQ exp  (22)
	auxvar : VAR LPAREN . formals RPAREN EQ error  (23)
	formals : .  (91)

	VAR  shift 99
	RPAREN  reduce 91

	formals  goto 100
	formals_rev  goto 101
	fparam  goto 102


state 54
	auxvar : VAR EQ . exp  (21)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	NOT  shift 22
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	exp  goto 103
	mix  goto 28
	exp_logical  goto 29
	exp_logical_b  goto 30
	atomic  goto 31
	exp_compare  goto 32
	exp_arith  goto 33
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 55
	auxvars : auxvar auxvars .  (19)

	.  reduce 19


state 56
	atomic : VAR LPAREN . RPAREN  (76)
	atomic : VAR LPAREN . actuals RPAREN  (77)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	RPAREN  shift 104
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 105
	actuals  goto 106
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37
	actuals_rev  goto 107


state 57
	atomic : LPAREN mix . RPAREN  (68)
	atomic : LPAREN mix . RPAREN SPLIT num  (69)

	RPAREN  shift 108
	.  error


state 58
	exp_arith : exp_arith . PLUS exp_arith  (50)
	exp_arith : exp_arith . MINUS exp_arith  (51)
	exp_arith : exp_arith . MULT exp_arith  (52)
	exp_arith : exp_arith . AND exp_arith  (53)
	exp_arith : exp_arith . OR exp_arith  (54)
	exp_arith : exp_arith . XOR exp_arith  (55)
	exp_arith : exp_arith . SMOD exp_arith  (56)
	exp_arith : exp_arith . UMOD exp_arith  (57)
	exp_arith : exp_arith . SHIFTL exp_arith  (58)
	exp_arith : exp_arith . USHIFTR exp_arith  (59)
	exp_arith : exp_arith . SHIFTR exp_arith  (60)
	exp_arith : exp_arith . POWER exp_arith  (61)
	exp_arith : MINUS exp_arith .  (62)

	.  reduce 62


state 59
	exp_logical : NOT atomic .  (38)
	atomic_e : atomic .  (63)

	$end  reduce 38
	error  reduce 38
	NUM  reduce 38
	VAR  reduce 38
	CAST  reduce 63
	LPAREN  reduce 38
	RPAREN  reduce 38
	LSQUARE  reduce 63
	COLON  reduce 38
	AUXVAR  reduce 38
	CONST  reduce 38
	INV  reduce 38
	ASSUME  reduce 38
	ASSERT  reduce 38
	CUT  reduce 38
	PREDICATE  reduce 38
	CONJUNCTION  reduce 38
	DISJUNCTION  reduce 38
	RARR  reduce 38
	MINUS  reduce 38
	QUESTION  reduce 38
	DOT  reduce 63
	CARRY  reduce 38
	NOT  reduce 38
	LOW  reduce 63
	HIGH  reduce 63
	MEM64  reduce 38
	MEM32  reduce 38
	TRUE  reduce 38


state 60
	consts : exp consts .  (17)

	.  reduce 17


state 61
	exp_logical : exp_logical CONJUNCTION . exp_logical  (37)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	NOT  shift 22
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	exp_logical  goto 109
	atomic  goto 31
	exp_compare  goto 32
	exp_arith  goto 33
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 62
	exp_logical : exp_logical DISJUNCTION . exp_logical  (36)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	NOT  shift 22
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	exp_logical  goto 110
	atomic  goto 31
	exp_compare  goto 32
	exp_arith  goto 33
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 63
	exp_logical : exp_logical RARR . exp_logical  (35)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	NOT  shift 22
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	exp_logical  goto 111
	atomic  goto 31
	exp_compare  goto 32
	exp_arith  goto 33
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 64
	mix : exp_logical_b QUESTION . exp_logical_e COLON exp_logical_e  (32)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	NOT  shift 22
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	exp_logical  goto 112
	exp_logical_e  goto 113
	atomic  goto 31
	exp_compare  goto 32
	exp_arith  goto 33
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 65
	exp_arith : exp_arith SMOD . exp_arith  (56)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 114
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 66
	exp_arith : exp_arith UMOD . exp_arith  (57)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 115
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 67
	exp_arith : exp_arith POWER . exp_arith  (61)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 116
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 68
	exp_arith : exp_arith PLUS . exp_arith  (50)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 117
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 69
	exp_arith : exp_arith MINUS . exp_arith  (51)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 118
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 70
	exp_arith : exp_arith MULT . exp_arith  (52)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 119
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 71
	exp_arith : exp_arith AND . exp_arith  (53)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 120
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 72
	exp_arith : exp_arith OR . exp_arith  (54)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 121
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 73
	exp_arith : exp_arith XOR . exp_arith  (55)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 122
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 74
	exp_compare : exp_arith EQ . exp_arith  (42)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 123
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 75
	exp_compare : exp_arith NE . exp_arith  (43)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 124
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 76
	lessop : SLT .  (102)

	.  reduce 102


state 77
	moreop : SGT .  (106)

	.  reduce 106


state 78
	lessop : SLE .  (103)

	.  reduce 103


state 79
	moreop : SGE .  (107)

	.  reduce 107


state 80
	lessop : ULT .  (100)

	.  reduce 100


state 81
	moreop : UGT .  (104)

	.  reduce 104


state 82
	lessop : ULE .  (101)

	.  reduce 101


state 83
	moreop : UGE .  (105)

	.  reduce 105


state 84
	exp_arith : exp_arith SHIFTL . exp_arith  (58)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 125
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 85
	exp_arith : exp_arith SHIFTR . exp_arith  (60)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 126
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 86
	exp_arith : exp_arith USHIFTR . exp_arith  (59)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error

	atomic  goto 31
	exp_arith  goto 127
	atomic_e  goto 34
	big  goto 35
	var  goto 36
	typem  goto 37


state 87
	exp_compare : exp_arith lessop . actuals bless  (40)

	NUM  shift 17
	VAR  shift 18
	LPAREN  shift 19
	MINUS  shift 20
	CARRY  shift 21
	MEM64  shift 23
	MEM32  shift 24
	TRUE  shift 25
	.  error
